{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 14,
  "lineage": "9c6263b9-3540-387e-f21b-5385e35c5d75",
  "resources": [
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055f6b42ae3359834",
            "arn": "arn:aws:ec2:us-east-1:471112894147:elastic-ip/eipalloc-055f6b42ae3359834",
            "domain": "vpc",
            "id": "eipalloc-055f6b42ae3359834",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-224-16-14.compute-1.amazonaws.com",
            "public_ip": "54.224.16.14",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c68f701d8090592",
            "arn": "arn:aws:ec2:us-east-1:471112894147:instance/i-0c82ca4d1085c45ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c82ca4d1085c45ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0738f8250566ca2fa",
            "private_dns": "ip-172-10-1-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.10.1.118",
            "public_ip": "3.238.77.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06a70d1722c015749",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0195c94fd33ef8d48",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ebee6eff1f2148e9"
            ]
          },
          "dependencies": [
            "module.app-deployment.aws_security_group.sg",
            "module.app-deployment.aws_subnet.subnet1",
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c68f701d8090592",
            "arn": "arn:aws:ec2:us-east-1:471112894147:instance/i-0cc78eb683c1db6f5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc78eb683c1db6f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a6f13a7cba8bd25",
            "private_dns": "ip-172-10-2-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.10.2.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07447e4dd9cd48f73",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0680b35cdf26290bb",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ebee6eff1f2148e9"
            ]
          },
          "dependencies": [
            "module.app-deployment.aws_security_group.sg",
            "module.app-deployment.aws_subnet.subnet2",
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894147:internet-gateway/igw-033520b13edbdfb4a",
            "id": "igw-033520b13edbdfb4a",
            "owner_id": "471112894147",
            "vpc_id": "vpc-0ef69403e48bae3dd"
          },
          "dependencies": [
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055f6b42ae3359834",
            "association_id": "eipassoc-0894d5eaaccc23716",
            "connectivity_type": "public",
            "id": "nat-0b28e22b876c08e1f",
            "network_interface_id": "eni-05b91e4f463064723",
            "private_ip": "172.10.2.59",
            "public_ip": "54.224.16.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0680b35cdf26290bb"
          },
          "dependencies": [
            "module.app-deployment.aws_eip.nat_eip",
            "module.app-deployment.aws_subnet.subnet2",
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_rt",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894147:route-table/rtb-026ff9c9c35aa897a",
            "id": "rtb-026ff9c9c35aa897a",
            "owner_id": "471112894147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b28e22b876c08e1f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_subnet_rt"
            },
            "tags_all": {
              "Name": "private_subnet_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef69403e48bae3dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-deployment.aws_eip.nat_eip",
            "module.app-deployment.aws_nat_gateway.nat_gateway",
            "module.app-deployment.aws_subnet.subnet2",
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894147:route-table/rtb-0a945e9d0353055a1",
            "id": "rtb-0a945e9d0353055a1",
            "owner_id": "471112894147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033520b13edbdfb4a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_project_rt"
            },
            "tags_all": {
              "Name": "tf_project_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef69403e48bae3dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-deployment.aws_internet_gateway.gateway",
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_rt_association",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f3912c0ff93338e",
            "route_table_id": "rtb-026ff9c9c35aa897a",
            "subnet_id": "subnet-0680b35cdf26290bb"
          },
          "dependencies": [
            "module.app-deployment.aws_eip.nat_eip",
            "module.app-deployment.aws_nat_gateway.nat_gateway",
            "module.app-deployment.aws_route_table.private_subnet_rt",
            "module.app-deployment.aws_subnet.subnet2",
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association1",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063eb06e47dfff1e2",
            "route_table_id": "rtb-0a945e9d0353055a1",
            "subnet_id": "subnet-0195c94fd33ef8d48"
          },
          "dependencies": [
            "module.app-deployment.aws_internet_gateway.gateway",
            "module.app-deployment.aws_route_table.rt",
            "module.app-deployment.aws_subnet.subnet1",
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894147:security-group/sg-0ebee6eff1f2148e9",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebee6eff1f2148e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP TLS to VPC",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH to VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240716125905991900000001",
            "name_prefix": "terraform-",
            "owner_id": "471112894147",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef69403e48bae3dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894147:subnet/subnet-0195c94fd33ef8d48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0195c94fd33ef8d48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112894147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ef69403e48bae3dd"
          },
          "dependencies": [
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894147:subnet/subnet-0680b35cdf26290bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0680b35cdf26290bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112894147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ef69403e48bae3dd"
          },
          "dependencies": [
            "module.app-deployment.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-deployment",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "module.app-deployment.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894147:vpc/vpc-0ef69403e48bae3dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.10.0.0/16",
            "default_network_acl_id": "acl-0276f245b935afba1",
            "default_route_table_id": "rtb-0fa6f3c60a1e6ff94",
            "default_security_group_id": "sg-0c94d6d519b3217d2",
            "dhcp_options_id": "dopt-07f500e971980da5a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef69403e48bae3dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa6f3c60a1e6ff94",
            "owner_id": "471112894147",
            "tags": {
              "Name": "myvpc"
            },
            "tags_all": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}